--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "jimp": "^0.16.1",
     "next": "10.0.5",
     "prettier": "2.2.1",
     "query-string": "^6.13.8",
